# WorldBrain

./: .gitignore  AGENTS.md  ANTI_PATTERNS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  start-dev.bat  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
core_data/: base-json-import.ts  base-json-serialization.ts  base-json-validation.ts  calendar-schema.ts  card-schema.ts  effective-entity.ts  entity-type-schemas.ts  event-schema.ts  handout-schema.ts  map-schema.ts  node-builtins.d.ts  relations-schema.ts  rule-schema.ts  saved-views-schema.ts  search-schema.ts  session-schema.ts
docs/: handover-i18n.md  handover-player-identity.md
planning/: ROADMAP.md
scripts/: check-prerequisites.mjs  check-toolchain.mjs
src/: App.tsx  i18n.ts  main.tsx  style.css  tab-wiring.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: issue-104-m5-database-type-casts.test.ts  issue-107-no-react-leaflet.test.ts  issue-109-player-map-export-xss.test.ts  issue-114-ap001-database-as-never.dom.test.tsx  issue-114-ap001-database-as-never.test.ts  issue-142-dm-screen-service-stubs.test.ts  issue-18-malformed-json-import.test.ts  issue-19-additional-properties-validation.test.ts  issue-20-overridden-fields-accuracy.test.ts  issue-21-renderer-boundary.test.ts  issue-30-database-type-safety.dom.test.tsx  issue-31-tab-registry-isolation.dom.test.tsx  issue-32-block-type-unification.test.ts  m0-s01-npm-policy.test.mjs  (+132 more)
(+171 files in other folders)
