[package]
name = "worldbuilderx"
version = "0.0.0"
description = "WorldBuilderX desktop shell"
authors = ["WorldBuilderX Contributors"]
license = "UNLICENSED"
edition = "2021"

[lib]
name = "worldbuilderx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
